--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,7 @@
         <activity android:name="subclass.CustomVolumControlBar_Activity" />
         <activity android:name="subclass.Fragment_Activity" />
         <activity android:name="subclass.FragmentActivity2" />
+        <activity android:name="subclass.Socket_Activity" />
     </application>
 
 </manifest>
