--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,7 @@
         <activity android:name="subclass.Fragment_Activity" />
         <activity android:name="subclass.FragmentActivity2" />
         <activity android:name="subclass.Socket_Activity" />
+        <activity android:name="subclass.URLTest_Activity" />
     </application>
 
 </manifest>
