增加一些动画

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -85,6 +85,10 @@
         <activity android:name="com.images.Blast" />
         <activity android:name="com.images.TweenAnim" />
         <activity android:name="com.images.Butterfly" />
+        <activity android:name="com.images.ListviewTween" />
+        <activity android:name="com.images.AnimatorTest" />
+        <activity android:name="com.images.BouncingBalls" />
+
     </application>
 
 </manifest>
